// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResponsiveText should match snapshot with custom size and color 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <Text
      style={
        [
          {
            "color": "#ff0000",
            "fontSize": 20,
          },
          undefined,
        ]
      }
    >
      Custom Text
    </Text>
  </View>
</RNCSafeAreaProvider>
`;

exports[`ResponsiveText should match snapshot with default props 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <Text
      style={
        [
          {
            "color": "#000000",
            "fontSize": 16,
          },
          undefined,
        ]
      }
    >
      Snapshot Test
    </Text>
  </View>
</RNCSafeAreaProvider>
`;

exports[`ResponsiveText should match snapshot with headline variant 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <Text
      style={
        [
          {
            "color": "#000000",
            "fontSize": 32,
          },
          undefined,
        ]
      }
    >
      Headline Text
    </Text>
  </View>
</RNCSafeAreaProvider>
`;
